# elphmod

./: .flake8  .gitignore  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README  README.md  README.txt  TODO  TODO.md  bravais.py  coupling.py  dos.py  electrons.py  example.py  example_plot.py  phonons.py  plot.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: NbSe2-DFPT-LR.elph  NbSe2-cDFPT-LR.disp.gp  NbSe2-cDFPT-LR.ifc  NbSe2-cDFPT-SR.disp.gp  NbSe2-cDFPT-SR.ifc  matdyn.in
doc/: Makefile  README.md  conf.py  elphmod.tex  examples.sh  index.rst  makefile  requirements.txt  style.css
doc/examples/: a2f.rst  bare.rst  cdw_1d.rst  coulomb.rst  decay.rst  defpot.rst  dos.rst  double_bz.rst  double_delta.rst  electrons.rst  fan_migdal.rst  fermi_surface.rst  fermi_velocity.rst  fluctuations.rst  goldstone.rst  intersections.rst  isoline.rst  kekule.rst  lr.rst  md.rst  modes.rst  occupations.rst  peierls.rst  phonons.rst  phrenorm.rst  phrenorm_3d.rst  phrenorm_graphene.rst  projwfc.rst  projwfc_1d.rst  projwfc_3d.rst  quadrupole.rst  simstm.rst  simsts.rst  skiing.rst  smear_tetra.rst  specfun.rst  ssh.rst  supercell_el.rst  supercell_elel.rst  supercell_elph.rst  (+3 more)
doc/files/: style.css
doc/modules/: MPI.rst  bravais.rst  diagrams.rst  dispersion.rst  dos.rst  el.rst  elel.rst  eliashberg.rst  elph.rst  md.rst  misc.rst  models.rst  occupations.rst  ph.rst  plot.rst
doc/pages/: patches.rst
elphmod/: MPI.py  __init__.py  bravais.py  coupling.py  diagrams.py  dispersion.py  dos.py  el.py  electrons.py  elel.py  eliashberg.py  elph.py  md.py  misc.py  occupations.py  ph.py  phonons.py  plot.py
elphmod/models/: be.py  chain.py  graphene.py  tas2.py
examples/: 3x3.py  README.md  a2f.py  chi2.py  chi3.py  coulomb.py  dos.py  double_bz.py  double_delta.py  electrons.py  example.py  fan_migdal.py  fermi_surface.py  fermi_velocity.py  fourier.py  fourier_interpolation.py  image_io.py  intersections.py  irreducibles.py  isoline.py  kekule.py  model.py  nosym.py  occupations.py  peierls.py  phonons.py  plotBZ.py  q2r.py  requirements.txt  rotate.py  run.sh  skiing.py  smear_tetra.py  specfun.py  ssh.py  supercell_el.py  supercell_el_general.py  supercell_elel.py  supercell_elph.py  supercell_ph.py  (+4 more)
examples/bare/: .gitignore  README.md  bare.py  ph.in  q2r.in  run.sh
examples/cdw_1d/: .gitignore  README.md  cdw_1d.py  epw.in  nscf.in  ph.in  run.sh  scf.in
examples/data/: .gitignore  NbSe2-DFPT-LR.disp.gp  NbSe2-DFPT-LR.ifc  NbSe2-cDFPT-LR.elph  TaS2.py  U.ijkl  chain.py  graphene.py
examples/fluctuations/: .gitignore  README.md  epw.in  fluctuations.py  run.sh
examples/goldstone/: .gitignore  README.md  cdfpt.in  dfpt.in  goldstone.py  pw.in  run.sh  subspace.in
examples/lambda/: .gitignore  README.md  epw.in  lambda.py  nscf.in  ph.in  pw.in  q2r.in  run.sh
examples/lr/: .gitignore  README.md  _quadrupole.fmt  epw.in  epw_3d.in  epw_dipole_sp.in  epw_gaussian.in  epw_no_lr.in  epw_quadrupole.in  lr.py  nscf.in  ph.in  pw.in  q2r_3d.in  q2r_gaussian.in  run.sh
examples/md/: .gitignore  README.md  input.xml  md.py  pes.py  run.sh
examples/modes/: .gitignore  README.md  (+4 more)
logo/: Makefile  elphmod.tex  logo.sh  logo.tex  optimize.py  pad.py
patches/: README.md  qe-6.3-backports.patch  qe-6.7MaX-Release.patch  qe-6.8.patch  qe-7.0.patch  qe-7.1.patch  qe-7.2.patch  qe-7.3.1.patch  qe-7.3.patch  qe-7.4.patch  qe-7.5.patch
test/: test_md.py
tests/: .gitignore  run.sh  run_py_versions_conda.sh  test_bravais.py  test_diagrams.py  test_dispersion.py  test_el.py  test_elel.py  test_elph.py  test_md.py  test_misc.py  test_models.py  test_occupations.py  test_ph.py  test_wigner.py
(+133 files in other folders)
