[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elphmod"
dynamic = ["version"]
authors = [{name = "elphmod Developers"}]
description = "Python modules for electron-phonon models"
readme = "README.md"
urls = {Homepage = "https://github.com/janberges/elphmod"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.5"
dependencies = ["numpy", "scipy"]

[project.scripts]
elphmodenv = "elphmod.MPI:elphmodenv"
kpoints = "elphmod.bravais:kpoints"
minimum = "elphmod.misc:minimum"
ph2epw = "elphmod.elph:ph2epw"

[tool.setuptools]
dynamic = {version = {attr = "elphmod.__version__"}}
packages = {find = {namespaces = false}}
