[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "elphmod"
dynamic = ["version"]
authors = [{name = "elphmod Developers"}]
description = "Python modules for electron-phonon models"
readme = "README.md"
license = {file = "LICENSE"}
urls = {Homepage = "https://github.com/janberges/elphmod"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.5"
dependencies = ["numpy", "scipy"]

[project.scripts]
elphmodenv = "elphmod.MPI:elphmodenv"
kpoints = "elphmod.bravais:kpoints"
minimum = "elphmod.misc:minimum"
ph2epw = "elphmod.elph:ph2epw"
