[metadata]
name = elphmod
version = attr: elphmod.__version__
author = elphmod Developers
author_email =
description = Python modules for electron-phonon models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janberges/elphmod
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=2.7
install_requires = numpy
scripts =
    bin/elphmodenv
    bin/kpoints
    bin/minimum
    bin/ph2epw
